# silverFish

./: Cargo.toml  perf.txt  urls.txt
src/: main.rs
src/fish_legs/: config.rs  crawler.rs  fetcher.rs  frontier.rs  mod.rs  parser.rs  scheduler.rs  types.rs
