[package]
name = "spideysense"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.4"
scraper = "0.27.0"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = {version="1.52.3", features=["full"]}
tracing = "0.1.44"
tracing-subscriber = {version="0.3.23", features=["env-filter"]}
url = "2.5.8"
